    - Fix Ubuntu Dapper release version (6.04 -> 6.06).
      (https://launchpad.net/bugs/36921)
  * pg_createcluster: Add option -p/--port to set the cluster port.
    Closes: #359249
  * t/030_errors.t: Check that pg_createcluster's --port option validates the
    port number (invalid number, already used port).
  * t/090_multicluster.t: Check that pg_createcluster's --port option works.

 -- Martin Pitt <mpitt@debian.org>  Tue, 28 Mar 2006 20:28:20 +0200

postgresql-common (48) unstable; urgency=low

  * t/001_packages.t: Do not fail if postgresql-8.0 is not installed, so that
    the complete test suite works with just 7.4 and 8.1.
  * Remove manual conffile transition handling in p-client-common maintainer
    scripts, since current dpkg now gets it right.
  * t/090_multicluster.t: Remove test user_clusters so that the broken one
    does not stay around if no user_clusters file existed before.
  * testsuite: Set all variables that potentially cause Perl taint check
    errors (IFS, CDPATH, ENV, BASH_ENV) to catch taint check bugs.
  * PgCommon.pm: Add two functions prepare_exec() and restore_exec() which set
    up a save (untainted) environment for calling external programs.
  * pg_ctlcluster, pg_maintenance, pg_dropcluster, pg_upgradecluster: Clean
    environment to not call external programs with potentially tainted
    variables.

 -- Martin Pitt <mpitt@debian.org>  Wed, 22 Mar 2006 00:03:46 +0100

postgresql-common (47) unstable; urgency=low

  * debian/control: Have p-client-common Replace: all versions of
    postgresql-common; this is a quick workaround for a dpkg bug (orphaned
    conffiles cause package conflicts). Closes: #357909, #357910

 -- Martin Pitt <mpitt@debian.org>  Mon, 20 Mar 2006 19:12:29 +0100

postgresql-common (46) unstable; urgency=low

  * t/020_create_sql_remove.t: Make check of pg_maintenance output stricter to
    catch things like taint errors.
  * PgCommon.pm, get_versions() and get_version_clusters(): Check return