@@ -8,10 +8,10 @@ use TestLib;
 use lib '/usr/share/postgresql-common';
 use PgCommon;
 
-use Test::More tests => 6 * 7 + 7;
+use Test::More tests => 6 * 20 + 7;
 
 # create a test cluster with given locale, check the locale/encoding, and
-# remove it again (unless disabled)
+# remove it
 # Arguments: <version> <locale> [<encoding>] 
 sub check_cluster {
     my ($v, $locale, $enc) = @_;
@@ -19,10 +19,10 @@ sub check_cluster {
     if (defined $enc) {
 	$cluster_name .= "_$enc";
 	is ((system "LC_ALL='$locale' pg_createcluster --encoding $enc --start $v $cluster_name >/dev/null 2>&1"), 0,
-		"pg_createcluster for $locale with --encoding succeeded");
+		"pg_createcluster version $v for $locale with --encoding succeeded");
     } else {
 	is ((system "LC_ALL='$locale' pg_createcluster --start $v $cluster_name >/dev/null 2>&1"), 0,
-		"pg_createcluster for $locale without --encoding succeeded");
+		"pg_createcluster version $v for $locale without --encoding succeeded");
     }
 
     # check cluster locale
@@ -45,7 +45,26 @@ sub check_cluster {
 	unlike $$outref, qr/template1.*(UNICODE|UTF8)/, 'template1 is not UTF-8 encoded';
     }
 
-    # drop cluster again if requested
+    # create a table and stuff some ISO-8859-1 characters into it (äÖß¼)
+    is ((exec_as 'postgres', "createdb test", $outref), 0, 'creating test database');
+    is_program_out 'postgres', "/bin/echo -e '\344\326\337\274' | psql -c \"set client_encoding='latin1'; 
+	create table t (x varchar); copy t from stdin\" test", 0, '',
+	'creating table with ISO-8859-1 characters';
+    is_program_out 'postgres', "echo \"set client_encoding='utf8'; select * from t\" | psql -Atq test", 0,
+	"\303\244\303\226\303\237\302\274\n", 'correct string in UTF-8';
+    is_program_out 'postgres', "echo \"set client_encoding='latin1'; select * from t\" | psql -Atq test", 0,
+	"\344\326\337\274\n", 'correct string in ISO-8859-1';
+
+    # do the same test with using UTF-8 as input
+    is_program_out 'postgres', "echo 'äÖß¼' | psql -qc \"set client_encoding='utf8'; 
+	delete from t; copy t from stdin\" test", 0, '',
+	'creating table with UTF-8 characters';
+    is_program_out 'postgres', "echo \"set client_encoding='utf8'; select * from t\" | psql -Atq test", 0,
+	"\303\244\303\226\303\237\302\274\n", 'correct string in UTF-8';
+    is_program_out 'postgres', "echo \"set client_encoding='latin1'; select * from t\" | psql -Atq test", 0,
+	"\344\326\337\274\n", 'correct string in ISO-8859-1';
+
+    # drop cluster
     is ((system "pg_dropcluster $v $cluster_name --stop-server"), 0, 'Dropping cluster');
 }
 
